- bugfix: segfault with expression-based filters
- bugfix: omsnmp did not deref errmsg object on exit (no bad effects caused)
- some cleanup
- bugfix: imklog did not work well with kernel 2.6+. Thanks to Peter
  Vrabec for patching it based on the development in sysklogd - and thanks
  to the sysklogd project for upgrading klogd to support the new
  functionality
---------------------------------------------------------------------------
Version 3.14.1 (rgerhards), 2008-04-04
- bugfix: some messages were emited without hostname
- bugfix: rsyslogd was no longer build by default; man pages are 
  only installed if corresponding option is selected. Thanks to
  Michael Biebl for pointing these problems out.
- bugfix: zero-length strings were not supported in object
  deserializer
- disabled atomic operations for this stable build as it caused
  platform problems
- bugfix: memory leaks in script engine
- bugfix: $hostname and $fromhost in RainerScript did not work
- bugfix: some memory leak when queue is runing in disk mode
- man pages improved thanks to varmofekoj and Peter Vrabec
- We have removed the 32 character size limit (from RFC3164) on the
  tag. This had bad effects on existing envrionments, as sysklogd didn't
  obey it either (probably another bug in RFC3164...). We now receive
  the full size, but will modify the outputs so that only 32 characters
  max are used by default. If you need large tags in the output, you need
  to provide custom templates.
---------------------------------------------------------------------------
Version 3.14.0 (rgerhards), 2008-04-02
An interim version was accidently released to the web. It was named 3.14.0.
To avoid confusion, we have not assigned this version number to any
official release. If you happen to use 3.14.0, please update to 3.14.1.
---------------------------------------------------------------------------
Version 3.13.0-dev0 (rgerhards), 2008-03-31