@@ -7,6 +7,10 @@ Version 3.14.2 (rgerhards), 2008-04-??
   Vrabec for patching it based on the development in sysklogd - and thanks
   to the sysklogd project for upgrading klogd to support the new
   functionality
+- some cleanup in imklog
+- bugfix: potential segfault in imklog when kernel is compiled without
+  /proc/kallsyms and the file System.map is missing. Thanks to
+  Andrea Morandi for pointing it out and suggesting a fix.
 ---------------------------------------------------------------------------
 Version 3.14.1 (rgerhards), 2008-04-04
 - bugfix: some messages were emited without hostname
